@@ -152,6 +152,13 @@ def author_unfollow(follower_id, slug):
     return False
 
 
+# TODO: caching query
+@query.field("get_authors_all")
+async def get_authors_all(_, _info):
+    with local_session() as session:
+        return session.query(Author).join(ShoutAuthor, Author.id == ShoutAuthor.author).all()
+
+
 @query.field("load_authors_all")
 async def load_authors_all(_, _info, limit: int = 50, offset: int = 0):
     q = select(Author)
