@@ -4,6 +4,7 @@
 - resolvers: added reader.load_shouts_top_random
 - resolvers: added reader.load_shouts_unrated
 - resolvers: community follower id property name is .author
+- resolvers: get_authors_all and load_authors_all
 - services: auth connector upgraded
 
 
